fix(style): wrap the tea category description

--- a/src/app/tea-categories/tea-categories.page.scss
+++ b/src/app/tea-categories/tea-categories.page.scss
@@ -1,1 +1,5 @@
-
+:host {
+  ion-label {
+    white-space: normal;
+  }
+}
